--- a/templates/projects.html
+++ b/templates/projects.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <h1>Projects</h1>
-    <h2>Project 1: Web Scraper</h2>
-    <p>Description: Built a web scraper using Python's BeautifulSoup library to extract data from websites.</p>
-    <p>Technologies: Python, BeautifulSoup</p>
-    <h2>Project 2: Machine Learning Model</h2>
-    <p>Description: Developed a machine learning model using scikit-learn to predict housing prices based on various features.</p>
-    <p>Technologies: Python, scikit-learn</p>
+    <h2>Project 1: DNC Web Automation</h2>
+    <p>Description: Web Automation using python- Selenium, It was complete automation work from opening web page till downloading and saving files to folders on daily basis through Python automation.</p>
+    <p>Technologies: Python, BeautifulSoup,Selenium</p>
+    <h2>Project 2: Operational Traceability</h2>
+    <p>Description: Successfully designed and implemented a directed graph data structure using NetworkX python library to model complex job scheduling relationships.\n Developed robust functions to analyze job dependencies, providing insights into immediate predecessors and list of successors including all leaf nodes.</p>
+    <p>Technologies: Python, NetworkX</p>
 </body>
 </html>
