--- a/templates/skills.html
+++ b/templates/skills.html
@@ -11,10 +11,10 @@
     <h1>Skills</h1>
     <ul>
         <li>Python</li>
-        <li>Machine Learning</li>
+        <li>Machine Learning & AI</li>
         <li>Web Development</li>
-        <li>Data Analysis</li>
-        <li>Problem Solving</li>
+        <li>Data Analysis, Data Science</li>
+        <li>SQL, Tableau</li>
     </ul>
 </body>
 </html>
