--- a/templates/contact.html
+++ b/templates/contact.html
@@ -10,7 +10,7 @@
 <body>
     <h1>Contact Me</h1>
     <p>Email:swap0510@gmail.com</p>
-    <p>LinkedIn: <a href="https://www.linkedin.com/in/swapnil-kadam-8ba098183</a></p>
-    <p>GitHub: <a href="https://https://github.com/nilkadam">Your GitHub Profile</a></p>
+    <p>LinkedIn: <a href="https://www.linkedin.com/in/swapnil-kadam-8ba098183">Swapnil's Linkedin Profile</a></p>
+    <p>GitHub: <a href="https://github.com/nilkadam/">Swapnil's GitHub Profile</a></p>
 </body>
 </html>
